fix: align issue

--- a/zenctuary-theme-starter/blocks/zen-memberships/style.scss
+++ b/zenctuary-theme-starter/blocks/zen-memberships/style.scss
@@ -1,7 +1,6 @@
 .wp-block-zenctuary-zen-memberships {
   padding: 40px 20px;
   background-color: transparent;
-  text-align: center;
   font-family: Arial, sans-serif;
   width: 100%;
 }
